zh-cn/15.4/config/index.rst
|Fess| 配置指南
===============

|Fess| 配置的综合指南。各章节按目的进行分类整理。

.. toctree::
   :maxdepth: 2
   :caption: 简介

   intro

.. toctree::
   :maxdepth: 2
   :caption: 基础配置

   setup-port-network
   setup-memory
   setup-windows-service

.. toctree::
   :maxdepth: 2
   :caption: 爬虫配置

   crawler-basic
   crawler-advanced
   crawler-thumbnail

.. toctree::
   :maxdepth: 2
   :caption: 搜索功能配置

   search-basic
   search-advanced
   search-geosearch
   search-scroll
   search-form-integration

.. toctree::
   :maxdepth: 2
   :caption: 安全配置

   security-role
   security-virtual-host

.. toctree::
   :maxdepth: 2
   :caption: SSO配置

   sso-saml
   sso-oidc
   sso-entraid
   sso-spnego

.. toctree::
   :maxdepth: 2
   :caption: 系统管理

   admin-logging
   admin-index-backup
   admin-analyzer
   admin-opensearch-dashboards
