zh-cn/15.5/config/index.rst
|Fess| 配置指南
===============

|Fess| 配置的综合指南。各章节按目的进行分类整理。

.. toctree::
   :maxdepth: 2
   :caption: 简介

   intro

.. toctree::
   :maxdepth: 2
   :caption: 基础配置

   setup-port-network
   setup-memory
   setup-windows-service

.. toctree::
   :maxdepth: 2
   :caption: 爬虫配置

   crawler-basic
   crawler-advanced
   crawler-thumbnail

.. toctree::
   :maxdepth: 2
   :caption: 数据存储连接器

   datastore/index

.. toctree::
   :maxdepth: 2
   :caption: 搜索功能配置

   search-basic
   search-advanced
   search-geosearch
   search-scroll
   search-form-integration
   rank-fusion

.. toctree::
   :maxdepth: 2
   :caption: 安全配置

   security-role
   security-virtual-host
   ldap-integration
   multitenancy

.. toctree::
   :maxdepth: 2
   :caption: SSO配置

   sso-saml
   sso-oidc
   sso-entraid
   sso-spnego

.. toctree::
   :maxdepth: 2
   :caption: LLM/AI聊天配置

   llm-overview
   llm-ollama
   llm-openai
   llm-gemini
   rag-chat

.. toctree::
   :maxdepth: 2
   :caption: 脚本

   scripting-overview
   scripting-groovy

.. toctree::
   :maxdepth: 2
   :caption: 性能与运维

   rate-limiting
   load-control

.. toctree::
   :maxdepth: 2
   :caption: 系统管理

   admin-logging
   admin-index-backup
   admin-index-export
   admin-analyzer
   admin-opensearch-dashboards
